<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentry_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="melodywu616@gmail.com">melodywu</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cod_behavior</exec_depend>
  <exec_depend>cpp_lidar_filter</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>sentry_nav_bringup</exec_depend>
  <exec_depend>slam_bringup</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
